[package]
name = "whatgrep"
version = "0.1.0"
authors = ["MRoci"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.2.22", features = ["cargo"] }
rayon = "^1.3.0"
whatlang = "^0.16.0"
